plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.18'
	id 'io.spring.dependency-management' version '1.1.4'
	id "com.diffplug.spotless" version "6.23.2"
}

group = 'pl.edu.agh'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

spotless {

	format 'misc', {
		target '*.gradle', '.gitattributes', '.gitignore'

		trimTrailingWhitespace()
		indentWithTabs()
		endWithNewline()
	}
	java {
		googleJavaFormat()
		formatAnnotations()
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

	// vavr
	implementation 'io.vavr:vavr:0.10.4'

	// lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

	// neo4j
	implementation('org.springframework.boot:spring-boot-starter-data-neo4j')

	// neo4j in-memory testing
	testImplementation 'org.neo4j.test:neo4j-harness:5.14.0'

	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

}

tasks.named('test') {
	useJUnitPlatform()
}
